manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: 82107493_test
spec:
    ports:
    - port: 8080 
    selector:
        app: "82107493"
