manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82107493-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: a82107493-82107493.cepg-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: "82107493"
            port:
              number: 8080
        pathType: Prefix
